<resources>
    <string name="app_name">ToDoNotes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">logo</string>
    <string name="todo_notes_app">ToDo Notes App</string>
    <string name="create_your_own_todo_notes_everyday">Create Your Own ToDo Notes EveryDay</string>
    <string name="next">Next</string>
    <string name="you_can_choose_image_for_every_todo_s">You Can Choose Image For Every ToDo's</string>
    <string name="done">Done</string>
    <string name="back">Back</string>
    <string name="welcome">Welcome!</string>
    <string name="plan_and_record_tasks_in_todo_notes_app">Plan and Record Tasks in Todo Notes App</string>
    <string name="full_name">Full Name</string>
    <string name="username">UserName</string>
    <string name="login">Login</string>
</resources>